# behavior-rs

./: .gitignore  Cargo.toml  readme.md
examples/: simple.rs  simple_expand.rs
src/: inner.rs  lib.rs
