[package]
name = "behavior"
version = "0.1.1"
edition = "2021"
authors = ["Asami <asami73dgreen63@gmail.com>"]
description = "A macro checks like behavior in elixir."
license = "MIT OR Apache-2.0"
repository = "https://github.com/deepgreenAN/behavior-rs"
readme = "README.md"
categories = []
keywords = ["behavior", "elixir"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2.0", features = ["full"]}
darling = "^0.20"
heck = "^0.4"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
reqwest = { version = "0.11",  features = ["json", "blocking"]}
serde_json = "1.0"
async-trait = "0.1"